fixed z-index time travel bug

--- a/css/_tooltips.sass
+++ b/css/_tooltips.sass
@@ -16,7 +16,7 @@
 	background-position: 98% center
 	background-size: 1rem
 	border-radius: 0.5rem
-	z-index: 10
+	z-index: 100
 	font-size: 1rem
 	&.error
 		background-color: $cn-error
